package via.sdj3.grpcspringbootx.database.Slaughterhouse;

import via.sdj3.grpcspringbootx.database.SlaughterhouseInterfaces.HalfAnAnimalDAO;
import via.sdj3.grpcspringbootx.model.HalfAnAnimal;
import via.sdj3.handin3.HalfAnAnimalId;

public class HalfAnAnimalDAOImpl implements HalfAnAnimalDAO {
    @Override
    public HalfAnAnimal getHalfAnAnimalById(int id) {
        //TODO implement database request
        return null;
    }
}
